--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@tanstack/react-table": "^8.21.3",
+    "@uiw/react-codemirror": "^4.25.3",
+    "axios": "^1.13.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "web-tree-sitter": "^0.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
