--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.4",
     "@tanstack/react-table": "^8.21.3",
+    "@types/dagre": "^0.7.53",
     "@uiw/react-codemirror": "^4.25.3",
+    "@xyflow/react": "^12.9.3",
     "axios": "^1.13.2",
+    "dagre": "^0.8.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "web-tree-sitter": "^0.24.4"
