--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "elkjs": "^0.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "recharts": "^3.5.0",
     "web-tree-sitter": "^0.24.4"
   },
   "devDependencies": {
