--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@costvela/ui": "workspace:*",
+    "@codemirror/lang-javascript": "^6.2.4",
     "@costvela/api-client": "workspace:*",
     "@costvela/types": "workspace:*",
-    "@codemirror/lang-javascript": "^6.2.4",
+    "@costvela/ui": "workspace:*",
     "@tanstack/react-table": "^8.21.3",
+    "@types/dagre": "^0.7.53",
     "@uiw/react-codemirror": "^4.25.3",
     "@xyflow/react": "^12.9.3",
     "axios": "^1.13.2",
+    "dagre": "^0.8.5",
     "elkjs": "^0.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
