--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.20.0",
     "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/language": "^6.11.3",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.38.8",
     "@costvela/api-client": "workspace:*",
     "@costvela/types": "workspace:*",
     "@costvela/ui": "workspace:*",
+    "@lezer/highlight": "^1.2.3",
     "@tanstack/react-table": "^8.21.3",
     "@types/dagre": "^0.7.53",
     "@uiw/react-codemirror": "^4.25.3",
